feat: CRUD de chamados implementado com integração ao MySQL

--- a/frontend/src/styles/HomeSec.css
+++ b/frontend/src/styles/HomeSec.css
@@ -53,7 +53,9 @@ h1 {
 }
 
 .status.em-analise {
-  background-color: #ff9800;
+  background-color: blueviolet;
+  color:#000;
+  
 }
 
 .status.fechado {
